// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolSpanFc should allow markdown in label 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label md">
      <strong>
        Bold Label
      </strong>
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should hide label when hideLabel is true 1`] = `
<span class="kol-span kol-span--hide-label">
  <span class="kol-span__container">
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should render with badge text 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Label with
      <u>
        Badge
      </u>
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
    <kbd aria-hidden="true" class="badge-text-hint">
      Badge
    </kbd>
  </span>
</span>
`;

exports[`KolSpanFc should render with default props 1`] = `
<span class="kol-span">
  <span class="kol-span__container">
    <span class="kol-span__label">
      Default Label
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
  </span>
</span>
`;

exports[`KolSpanFc should render with icons 1`] = `
<span class="kol-span">
  <span class="icon kol-icon top">
    <i aria-hidden="true" class="kol-icon__icon top-icon" part="icon" role="presentation"></i>
  </span>
  <span class="kol-span__container">
    <span class="icon kol-icon left">
      <i aria-hidden="true" class="kol-icon__icon left-icon" part="icon" role="presentation"></i>
    </span>
    <span class="kol-span__label">
      Label with Icons
    </span>
    <span aria-hidden="true" class="kol-span__label" hidden=""></span>
    <span class="icon kol-icon right">
      <i aria-hidden="true" class="kol-icon__icon right-icon" part="icon" role="presentation"></i>
    </span>
  </span>
  <span class="bottom icon kol-icon">
    <i aria-hidden="true" class="bottom-icon kol-icon__icon" part="icon" role="presentation"></i>
  </span>
</span>
`;
